# MicroHack_py

./: Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
cmd/: main.go
fastapi_onboarding_api/: README.md  app.py  docker-compose.yml  pyproject.toml
fastapi_onboarding_api/api/routes/: courses.py  lessons.py  user.py  user_courses.py
fastapi_onboarding_api/db_controller/: db_controller.py
fastapi_onboarding_api/schemas/: db_schemas.py  schemas_update.py
internal/database/: database.go
internal/handlers/: admin.go  adminpassword.go  helpers.go  index.go  jwt.go  lesson.go  login.go  register.go  video.go
internal/middleware/: auth.go  logging.go
web/static/css/: admin.css  change_password.css  index.css  lesson.css  video.css
web/static/js/: admin.js
web/templates/: admin.html  change_password.html  index.html  lesson.html  login.html  register.html  video.html
